--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="single-shoe-card">
-              <div class="card" style="width: 18rem;">
+              <div class="card">
                 <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Supply 350</h5>
@@ -150,7 +150,7 @@
           </div>
           <div class="col-md-4">
             <div class="single-shoe-card">
-              <div class="card" style="width: 18rem;">
+              <div class="card">
                 <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Nike 320</h5>
@@ -163,7 +163,7 @@
           </div>
           <div class="col-md-4">
             <div class="single-shoe-card">
-              <div class="card" style="width: 18rem;">
+              <div class="card">
                 <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Red Max</h5>
