--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               <h2>LET'S STAY IN TOUCH </h2>
                 <P>Get updates on sales specials and more</P>
                 <input type="text" name="" id="" placeholder="Enter your email" >
-                <a class="buy-btn sent-btn">SEND</a>
+                <a href="#" class="buy-btn sent-btn">SEND</a>
             </div>
           </div>
         </div>
@@ -235,7 +235,7 @@
     </section>
 
     <footer>
-      <p class="text-center">Nasir Website. &copy; 2020 All rights Reserved</p>
+      <p class="text-center">Copyright © 2020 Nasir's Website. All Rights Reserved.</p>
     </footer>
 
 
