--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </section>
 
     <footer>
-      <p class="text-center">Nasirullah Website. &copy; 2020 All rights Reserved</p>
+      <p class="text-center">Copyright © 2020 Nasir's Website. All Rights Reserved.</p>
     </footer>
 
 
